# fuz

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATIONS.md  README.md  docker-compose.yml  fuz.spec  init-db.sh  main.py  manage.py  pyproject.toml
src/fuz/: __init__.py  admin.py  asgi.py  background_tasks.py  embeddings.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/fuz/migrations/: 0001_initial.py  __init__.py
src/fuz/templates/: visualize.html
